# simple-bidder

./: README.md  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
simple_bidder/: campaigns.json  helper.py  main.py
simple_bidder/models/: bid.py  campaign.py  response.py
tests/: test_bid.py  test_campaign.py  test_campaign_db.py  test_main.py
